2017-02-14  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/hook_funcs.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  lib/oci8/oci8.rb, lib/oci8/properties.rb:
	    Add tcp_keepalive options to OCI8.properties.

2017-01-14  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/error.c, ext/oci8/oci8.h,
	  ext/oci8/oci8lib.c: Fix memory leaks when `require 'oci8'` raises a LoadError.

2017-01-08  Kubo Takehiro <kubo@jiubao.org>
	* docs/install-binary-package.md, docs/install-instant-client.md:
	    Update documents for installation on Windows.

2017-01-07  Kubo Takehiro <kubo@jiubao.org>
	* ext/oci8/oci8lib.c: If libclntsh.so exports and imports same
	    functions, their PLT entries are forcedly modified to point
	    to itself not to use functions in other libraries.
	    (Only on Linux and macOS)
	* README.md, docs/ldap-auth-and-function-interposition.md:
	    Add document about "LDAP Authentication and Function Interposition."

2016-12-28  Yavor Nikolov <nikolov.javor@gmail.com>
	* README.md: add build status and Gem version badges
	    (merged at 2016-12-29)

2016-12-28  Yavor Nikolov <nikolov.javor@gmail.com>
	* README.md: add title, demote sections to H2
	    (merged at 2016-12-29)

2016-12-28  Yavor Nikolov <nikolov.javor@gmail.com>
	* lib/oci8/cursor.rb: Fix misleading cursor.bind_param header comment
	    Reword an obsolete description of bind_param - since currently there is no
	    restriction for Bignum nor for very large Integer values.
	    (merged at 2016-12-29)

2016-12-27  Yavor Nikolov <nikolov.javor@gmail.com>
	* dist-files, test/test_all.rb, test/test_bind_integer.rb:
	    Tests for binding integer cursor in parameters
	    Add tests for binding a range of small and large integer variables
	    directly (not through OraNumber).
	    (merged at 2016-12-29)

2016-12-26  Yavor Nikolov <nikolov.javor@gmail.com>
	* circle.yml, cisetup/create_ruby_user.sql, cisetup/oracle/download.sh,
	  cisetup/oracle/install.sh, cisetup/setup_accounts.sh: