@@ -1,4 +1,7 @@
 2017-02-14  Kubo Takehiro <kubo@jiubao.org>
+	* test/test_connstr.rb: fix test to pass the previous commit.
+
+2017-02-14  Kubo Takehiro <kubo@jiubao.org>
 	* ext/oci8/hook_funcs.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
 	  lib/oci8/oci8.rb, lib/oci8/properties.rb:
 	    Add tcp_keepalive options to OCI8.properties.
